services/api/python-test-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-test-api
  template:
    metadata:
      labels:
        app: python-test-api
    spec:
      containers:
        - name: python-test-api
          image: kamuri/python-test-api:1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              cpu: "0.01"
              memory: "100Mi"
