services/api/python-test-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl-producer-api-service
spec:
  selector:
    app: ytdl-producer-api
  ports:
  - port: 8080
