services/api/python-test-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-test-api-ingress
  annotations:
    haproxy.org/path-rewrite: /python-test-api/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
    - host: api.kamuridesu.com
      http:
        paths:
          - path: /python-test-api
            pathType: Prefix
            backend:
              service:
                name: python-test-api-service
                port:
                  number: 8080
